--- a/package.json
+++ b/package.json
@@ -8,22 +8,27 @@
     "build": "tsc -p tsconfig.build.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.1",
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^9.0.0",
     "@nestjs/mongoose": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
-    "axios": "^1.4.0",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
+    "axios": "^1.13.2",
+    "cache-manager": "^7.2.6",
     "dotenv": "^16.0.0",
     "express-rate-limit": "^6.7.0",
     "ioredis": "^5.0.0",
     "mongoose": "^7.0.0",
     "node-cron": "^3.0.0",
+    "pdfkit": "^0.17.2",
+    "puppeteer": "^24.32.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2"
   },
   "devDependencies": {
+    "@types/node": "^24.10.2",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
