--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@nestjs/platform-express": "^9.0.0",
     "axios": "^1.13.2",
     "cache-manager": "^7.2.6",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
     "dotenv": "^16.0.0",
     "express-rate-limit": "^6.7.0",
     "ioredis": "^5.0.0",
